--- a/WindowsFormsApp3/WindowsFormsApp3.csproj
+++ b/WindowsFormsApp3/WindowsFormsApp3.csproj
@@ -46,18 +46,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfirmacionFinalizacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConfirmacionFinalizacion.Designer.cs">
+      <DependentUpon>ConfirmacionFinalizacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Lista_Multados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Lista_Multados.Designer.cs">
+      <DependentUpon>Lista_Multados.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sistema.cs" />
     <Compile Include="Vehiculo.cs" />
+    <EmbeddedResource Include="ConfirmacionFinalizacion.resx">
+      <DependentUpon>ConfirmacionFinalizacion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Lista_Multados.resx">
+      <DependentUpon>Lista_Multados.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
